force-app/main/default/objects/LoanApplicantDeclaration/LoanApplicantDeclaration.object-meta.xml
<CustomObject>
    <sharingModel>Private</sharingModel>
</CustomObject>