force-app/main/default/objects/LoanApplicantDeclaration/fields/Component_Type__c.field-meta.xml
<CustomField>
    <fullName>Component_Type__c</fullName>
    <complianceGroup>Integrity_Accurate;Privacy_Non_Personal_Information;Source_Loan_Domain</complianceGroup>
    <description>Possible confirmation types.</description>
    <label>Component Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>COMPONENT_TYPE_UNSPECIFIED</fullName>
                <label>Unspecified</label>
            </value>
            <value>
                <fullName>COMPONENT_TYPE_NEEDS</fullName>
                <label>Needs Analysis</label>
            </value>
            <value>
                <fullName>COMPONENT_TYPE_LOAN_PREFERENCES</fullName>
                <label>Loan Preferences</label>
            </value>
            <value>
                <fullName>COMPONENT_TYPE_REFINANCE_LIABILITIES</fullName>
                <label>Refinance Liabilities</label>
            </value>
            <value>
                <fullName>COMPONENT_TYPE_PROPERTIES</fullName>
                <label>Properties</label>
            </value>
            <value>
                <fullName>COMPONENT_TYPE_APPLICANTS</fullName>
                <label>Applicants</label>
            </value>
            <value>
                <fullName>COMPONENT_TYPE_SIGNIFICANT_CHANGE</fullName>
                <label>Material Change</label>
            </value>
            <value>
                <fullName>COMPONENT_TYPE_LOAN_SUMMARY</fullName>
                <label>Loan Summary</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>