force-app/main/default/objects/LoanApplicantDeclaration/fields/Confirmation_Date__c.field-meta.xml
<CustomField>
    <fullName>Confirmation_Date__c</fullName>
    <complianceGroup>Integrity_Accurate;Privacy_Non_Personal_Information;Source_Loan_Domain</complianceGroup>
    <description>Timestamp of when the confirm occurred.</description>
    <label>Confirmation Date</label>
    <type>DateTime</type>
</CustomField>