force-app/main/default/objects/LoanApplicantDeclaration/fields/Is_Confirmable__c.field-meta.xml
<CustomField>
    <fullName>Is_Confirmable__c</fullName>
    <complianceGroup>Integrity - Accurate;Privacy - Non Personal Information;Source - Loan Domain</complianceGroup>
    <description>Component is in a confirmable state (required fields have been completed)</description>
    <label>Is Confirmable?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>