force-app/main/default/objects/LoanApplicantDeclaration/fields/Is_Confirmed__c.field-meta.xml
<CustomField>
    <fullName>Is_Confirmed__c</fullName>
    <complianceGroup>Integrity_Accurate;Privacy_Non_Personal_Information;Source_Loan_Domain</complianceGroup>
    <description>Component has been confirmed.</description>
    <label>Is Confirmed?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>