force-app/main/default/objects/LoanApplicantDeclaration/fields/Loan_Applicant__c.field-meta.xml
<CustomField>
    <fullName>Loan_Applicant__c</fullName>
    <complianceGroup>Integrity_Accurate;Privacy_Non_Personal_Information;Source_Loan_Domain</complianceGroup>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Associated Applicant</description>
    <label>Loan Applicant</label>
    <referenceTo>LoanApplicant</referenceTo>
    <relationshipLabel>Loan Applicant Declarations</relationshipLabel>
    <relationshipName>Loan_Applicant_Declarations</relationshipName>
    <type>Lookup</type>
</CustomField>